      as file updates instead of separate add/remove events (CNY-750,
      CNY-786, CNY-359)
    * Entitlements can be passed into ConaryClient and NetworkRepositoryClient
      objects directly (CNY-640)
    * Errors in callbacks are issues as warnings and the current job is
      finished before existing. KeyboardInterrupts and SystemExits are handled
      immediately (CNY-806)

  o Optimizations
    On a test system, "conary updateall --info" is around 24% faster
    than previous versions of Conary.

    * The SQL query used to retrieve troves from the local database
      has been optimized.  The new code is nearly four times faster
      for operations like "conary q group-dist --info".
    * The SQL query in getTroveContainers() used to determine the
      parent package(s) and groups(s) of a set of troves as recorded
      in the local database has been optimized.  The new code is
      almost 95 times faster. (0.2 seconds versus 19 seconds)
    * The code in getCompleteTroveSet() that creates Version and
      Flavor objects from entries in the database now caches the
      created object.  This is approximately a 4.5 times speed
      up. (2.10 seconds versus 9.4 seconds)
    * The code in iterUpdateContainerInfo has had similar version
      and flavor caching optimizations that make the code about 
      2.5 times faster (from 10 seconds to 4 seconds).

  o Build Changes:
    * The PythonSetup build action no longer provides the older
      --single-version-externally-managed argument, and instead
      provides the --prefix, --install-purelib, and --install-platlib
      arguments.  This allows it to work correctly with a greater
      number of packages. (CNY-809)
    * Python dependencies were previously incorrectly calculated
      for certain module path elements added in some Python C
      code (for example, contents of the lib-dynload directory);
      these errors are now resolved by using external python